fix: hero section button responsive on mobile when hovered

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -8,7 +8,7 @@
     }
 
     .banner button {
-        width: 100%;
+        width: 90%;
         max-width: 325px;
     }
 
